--- a/src/components/Dev/Dev.module.css
+++ b/src/components/Dev/Dev.module.css
@@ -120,6 +120,10 @@
   .content {
     align-items: center;
   }
+  .heroImg {
+    width: 60%;
+    margin-bottom: 20px;
+  }
 
   .title {
     width: 100%;
