--- a/src/vars.css
+++ b/src/vars.css
@@ -1,6 +1,7 @@
 :root {
     /* Colours */
-    --color-text: rgb(255, 255, 255);
+    /* --color-text: rgb(255, 255, 255); */
+    --color-text: #d8d8d8;
     --color-primary: #576cbc;
     --color-secondary: #19376d;
     --color-dark: #0b2447;
