--- a/src/components/Dev/Dev.module.css
+++ b/src/components/Dev/Dev.module.css
@@ -35,7 +35,12 @@
     rgba(255, 255, 255, 0) 120%
   );
   -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text; 
+  /* background: linear-gradient(270deg, #DF8908 80%, #B415FF 100%); */
+  /* background: linear-gradient(10deg, #ba1deb 5%, #0703e0 60%);
+  background-clip: text;
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 
 .description {
