--- a/src/components/HireMe/Hireme.module.css
+++ b/src/components/HireMe/Hireme.module.css
@@ -31,6 +31,7 @@
 .contactsection {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   gap: 150px;
 }
 
@@ -197,5 +198,15 @@
   
   .link a {
     font-size: 16px;
+  }
+
+  .contact_right input {
+    width: 100%;
+    height: 10%;
+  }
+
+  .contact_right textarea {
+    width: 100%;
+    height: 50%;
   }
 }
